# enigma-be

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml  tree.sh  tree_directory.sh
app/: __init__.py
app/controllers/: aggregate_controller.py  construction_controller.py  external_api_controller.py  market_controller.py  opex_controller.py
app/core/: config.py  database.py  logger.py
app/iron_bank/: router.py
app/iron_bank/models/: __init__.py  line_items.py  underwriting.py
app/iron_bank/schemas/: __init__.py  comp_set.py  optimization_item.py  underwriting.py  underwriting_detail.py  underwriting_tax.py  uw_operating_expense.py
app/middleware/: auth.py
app/models/: __init__.py  construction.py  market.py  opex.py
app/repositories/: construction_repository.py  market_repository.py  opex_repository.py
app/routers/: aggregate.py  construction.py  external_api.py  markets.py  opex.py
app/schemas/: aggregate.py  construction.py  external_api.py  market.py  opex.py
app/services/: aggregate_service.py  construction_service.py  csv_service.py  external_api_service.py  market_service.py  opex_service.py
migrations/: env.py
migrations/versions/: 65d8a054421b_init_schema_all_tables.py  b2673e068337_init_iron_bank.py  b35b5049dbae_init_schema_all_tables.py  e333243d95a7_add_underwriting_tables.py
scripts/: seed_construction_amenities.py  seed_construction_remodeling.py  seed_markets.py  seed_opex_by_bedrooms.py  seed_opex_by_size.py
scripts/data/: slug_mapping.json
